# AgentBabysitter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  GUIDELINE.md  LICENSE  PLAN.md  PLAN_POLICY.md  README.md  ROADMAP.md  SECURITY.md  TASK.md  abs.sh  claude-rc.sh  clauderc.sh  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  speak.py  start.md  transcribe.py  uninstall.sh  usage.sh  voicelab.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
abs/: __init__.py  __main__.py  _paths.py  agent.py  cli.py  conversation.py  feedback_store.py  framed_input.py  interaction_log.py  llm_test.py  memory.py  policy_engine.py  prompt_classifier.py  secrets.py  session_limit.py  session_store.py  setup_wizard.py  startup.py  summarizer.py  telegram_bridge.py  telegram_commands.py  telegram_sanitize.py  telegram_templates.py  tmux_monitor.py
abs/defaults/: agent_name.yml  policy.yml
agent_babysitter/: __init__.py
cldx/: __init__.py  agent.py  cli.py  conversation.py  interaction_log.py  llm_test.py  policy_engine.py  prompt_classifier.py  session_picker.py  setup_wizard.py  startup.py  summarizer.py  telegram_bridge.py  telegram_commands.py  telegram_sanitize.py  telegram_templates.py  tool_call.py  wait_bar.py
cldx/defaults/: agent_name.yml  policy.yml
config/: policy.yml
docs/: GUIDE.md  VOICE_MAC_TESTING.md
site/: index.html
src/: prompt_classifier.py  tmux_controller.py  tmux_monitor.py
test/html_test/: index.html
test/html_test_2/: index.html
tests/: README.md  conftest.py
tests/fixtures/snapshots/: big_task_menu.txt  complete.txt  dangerous_rm_menu.txt  edit_menu.txt  running.txt  safe_ls_yn.txt
tests/integration/: test_pipeline.py
tests/unit/: test_agent.py  test_chat_reply_and_header.py  test_conversation.py  test_current_task_extraction.py  test_destructive_ops.py  test_eager_classification.py  test_framed_input.py  test_interaction_log.py  test_llm_test.py  test_memory.py  test_picker.py  test_policy_engine.py  test_prompt_classifier.py  test_secrets.py  test_session_limit.py  test_session_picker.py  test_session_store.py  test_setup_wizard.py  test_startup.py  test_summarizer.py  test_telegram_bridge.py  test_telegram_commands.py  test_telegram_sanitize.py  test_telegram_templates.py  test_tmux_controller.py  test_tmux_monitor.py  test_tool_call.py  test_wait_bar.py  test_wait_bar_animated.py
