[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cldx"
version = "0.1.0"
description = "Second-layer terminal for Claude Code — monitors a tmux pane, classifies prompts, auto-responds via policy, and bridges to Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Pranjalab" }]
keywords = ["tmux", "claude", "cli", "automation", "approval", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "anthropic>=0.40",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Pranjalab/cldx"
Repository = "https://github.com/Pranjalab/cldx"
Issues = "https://github.com/Pranjalab/cldx/issues"

[project.scripts]
cldx = "cldx.cli:main"

[tool.setuptools.packages.find]
include = ["cldx*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cldx = ["defaults/*.yml", "defaults/*.yaml"]
