[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-babysitter"
version = "1.0.5"
description = "Agent Babysitter monitors your AI coding agent — Claude Code, Gemini CLI, Codex — so you don't have to. A local LLM enforces your policy, approves safe moves, escalates risky ones to your phone."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Pranjalab" }]
keywords = ["tmux", "claude", "gemini", "codex", "agent", "babysitter", "automation", "approval", "telegram", "policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "anthropic>=0.40",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
bedrock = ["boto3>=1.34"]
gemini = ["google-genai>=0.3"]
all-llm = ["boto3>=1.34", "google-genai>=0.3"]

[project.urls]
Homepage = "https://github.com/Pranjalab/AgentBabysitter"
Repository = "https://github.com/Pranjalab/AgentBabysitter"
Issues = "https://github.com/Pranjalab/AgentBabysitter/issues"

[project.scripts]
abs = "abs.cli:main"

[tool.setuptools.packages.find]
include = ["abs*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
abs = ["defaults/*.yml", "defaults/*.yaml"]
