[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-babysitter"
# Keep in sync with ABS_VERSION in abs.sh and the repo-root VERSION file.
version = "2.2.2"
description = "Leave your desk — Claude Code keeps working and reports to your phone over Telegram."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pranjalab" }]
keywords = ["claude-code", "telegram", "cli", "bash", "developer-tools", "claude"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/Pranjalab/AgentBabysitter"
Repository = "https://github.com/Pranjalab/AgentBabysitter"
Issues = "https://github.com/Pranjalab/AgentBabysitter/issues"

[project.scripts]
abs = "agent_babysitter:main"

# abs.sh is the real program and lives at the repo root, where install.sh and the
# dev symlinks resolve it. Copy it into the wheel at build time rather than moving
# it — moving it would repoint SCRIPT_PATH's PROJECT_ROOT away from .venv and
# transcribe.py and quietly break voice.
[tool.hatch.build.targets.wheel]
packages = ["agent_babysitter"]

[tool.hatch.build.targets.wheel.force-include]
"abs.sh" = "agent_babysitter/abs.sh"
